Adicionando o texto que explica o objetivo principal do projeto

--- a/employee_management-master/welcome.html
+++ b/employee_management-master/welcome.html
@@ -11,12 +11,12 @@
     <div class="container mt-3 p-3">
         <div class="card">
             <div class="card-header text-center">
-                <h3>Projeto Final</h3> 
+                <h3>Projeto em JavaScript: Gerenciamento do Décimo Terceiro e Benefícios para Funcionários</h3> 
             </div>
             
             <div class="card-body">
                 <p>
-                    Aqui vai ficar o texto que explica o nosso projeto
+                   Este projeto em JavaScript visa facilitar o gerenciamento do pagamento do décimo terceiro e outros benefícios para os funcionários de uma empresa. As principais funções implementadas no sistema são o cálculo do valor das férias, o aumento de salário e o cálculo do décimo terceiro.
                 </p>
                 <div class="text-center">
                     <a class="btn btn-primary mt-2" href="menu.html" role="button">Menu</a>
