--- a/employee_management-master/welcome.html
+++ b/employee_management-master/welcome.html
@@ -1,3 +1,8 @@
+<!-- INTEGRANTES DA EQUIPE
+ANTONIO MIKAEL VASCONCELOS AGUIAR - 2326335
+SANDY RODRIGUES DO NASCIMENTO – 2326334
+VITÓRIA DE OLIVEIRA ALMEIDA - 2325332 -->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
