Ajuste na função Décimo Terceiro

--- a/employee_management-master/menu.html
+++ b/employee_management-master/menu.html
@@ -38,7 +38,7 @@ VITÓRIA DE OLIVEIRA ALMEIDA - 2325332 -->
     <script>
         // atribuição das variáveis com as informações dadas pelo usuário
         const salario = window.prompt("Informe o salário do funcionário: ")
-        const qtd_meses = window.prompt("Informe a quantidade de tempo de trabalho em meses: ")
+        const qtd_meses = window.prompt("Informe a quantidade de tempo de trabalho em meses no ano (0 a 12 meses): ")
         
         //função para calcular o decimo terceiro do funcionário
         function decimoTerceiro(){
