Adicionando função de atualizar a página

--- a/employee_management-master/menu.html
+++ b/employee_management-master/menu.html
@@ -46,6 +46,7 @@ VITÓRIA DE OLIVEIRA ALMEIDA - 2325332 -->
             //condição que alerta ao usuário caso ele informe um valor não permitido
             if(qtd_meses<0 || qtd_meses>12){
                 alert("Quantidade de meses inválida!")
+                location.reload();
             } else{
                 decimo_terceiro = (salario * qtd_meses) / 12
 
