Modificando a ordem dos botões e mudando o nome do botão de Novo Salário

--- a/employee_management-master/menu.html
+++ b/employee_management-master/menu.html
@@ -20,11 +20,11 @@ VITÓRIA DE OLIVEIRA ALMEIDA - 2325332 -->
                 <p>Escolha a opção desejada:</p> 
             </div>
             <div class="card-body text-center">
-                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="novoSalario()">Novo Salário</button>
+                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2 border-radius" onclick="decimoTerceiro()">Décimo Terceiro</button>
                 <br/>
                 <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="valorFerias()">Férias</button>
                 <br/>
-                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2 border-radius" onclick="decimoTerceiro()">Décimo Terceiro</button>
+                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="novoSalario()">Salário com aumento</button>
                 <br/>
                 
                 <div class="text-center">
