--- a/employee_management-master/menu.html
+++ b/employee_management-master/menu.html
@@ -24,7 +24,7 @@ VITÓRIA DE OLIVEIRA ALMEIDA - 2325332 -->
                 <br/>
                 <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="valorFerias()">Férias</button>
                 <br/>
-                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="novoSalario()">Salário com aumento</button>
+                <button style="border-radius: 10px;" class="btn btn-outline-primary mt-2" onclick="novoSalario()">Salário com Aumento</button>
                 <br/>
                 
                 <div class="text-center">
